grub2 (1.99-9) UNRELEASED; urgency=low

  * Adjust apport hook to attach /boot/grub/device.map if it exists.
  * Fix regression in gfxterm background_color handling.

 -- Colin Watson <cjwatson@debian.org>  Wed, 22 Jun 2011 16:55:06 +0100

grub2 (1.99-8) unstable; urgency=low

  [ Robert Millan ]
  * Avoid buggy versions of libgeom-dev (see #630107).  Closes: #630197
  * Fix grub-probe detection for ATA devices using `ata' driver on kFreeBSD 9.
    - kfreebsd-9_ada_devices.patch

  [ Colin Watson ]
  * Update ntldr-img from grub-extras:
    - Handle ext3 inode sizes other than 128.

  [ Debconf translations ]
  * Kazakh (Baurzhan Muftakhidinov). Closes: #630915

 -- Colin Watson <cjwatson@debian.org>  Tue, 21 Jun 2011 02:10:10 +0100

grub2 (1.99-7) unstable; urgency=low

  [ Debconf translations ]
  * Basque (Iñaki Larrañaga Murgoitio).  Closes: #628716
  * Swedish (Martin Bagge / brother).  Closes: #628866
  * Czech (Miroslav Kure).  Closes: #628978
  * Brazilian Portuguese (Flamarion Jorge).  Closes: #629135
  * Spanish (Francisco Javier Cuadrado).  Closes: #629633

  [ Colin Watson ]
  * Cope with btrfs / inside an encrypted block device (thanks, alexeagar;
    LP: #757631).
  * Merge from Ubuntu:
    - Give up scanning partitions after ten consecutive open failures
      (LP: #787461).

 -- Colin Watson <cjwatson@debian.org>  Thu, 16 Jun 2011 00:13:14 +0100

grub2 (1.99-6) unstable; urgency=low

  [ Colin Watson ]
  * Update Vcs-* fields for Alioth changes.
  * Backport from upstream, removing the need for Breaks: udev (<< 168-1):
    - Don't stat devices unless we have to.

  [ Debconf translations ]
  * Catalan (Jordi Mallach).
  * Farsi (Behrad Eslamifar).  Closes: #628648

 -- Colin Watson <cjwatson@debian.org>  Tue, 31 May 2011 09:20:54 +0100

grub2 (1.99-5) unstable; urgency=low

  [ Colin Watson ]
  * Change grub2/linux_cmdline and grub2/kfreebsd_cmdline descriptions to
    indicate that the command line is allowed to be empty, since this is a